fixed string collision patch

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ materiali
 5 - Harmonic Oscillator  I/python/.ipynb_checkpoints
 *.wav
 10 - Waveguides/extra
+Final Assignment
+12 - Modal Synthesis I/extra
+14 - Interactions, Collisions, Frictions/NESS_Project
+14 - Interactions, Collisions, Frictions/extra
