--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Final Assignment
 12 - Modal Synthesis I/extra
 14 - Interactions, Collisions, Frictions/NESS_Project
 14 - Interactions, Collisions, Frictions/extra
+13 - Modal Synthesis II - Membranes/extra
