--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ Final Assignment
 14 - Interactions, Collisions, Frictions/NESS_Project
 14 - Interactions, Collisions, Frictions/extra
 13 - Modal Synthesis II - Membranes/extra
+7 - Nonlinear Oscillators and chaos/extra
+8 - Mass Interaction Models/MI-gen-examples
+14 - Interactions, Collisions, Frictions/python
